data/derived/comb/progs/unify/prog8693.ml.out
Characters 29-49:
  let fixpoint (f,b) = wwhile ((fixpointHelper f b),b);;
                               ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
